Change base username & add test profile config

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,4 +4,4 @@ contact_links:
     about: Please join the nf-core community here
   - name: "Slack #chipseqcr channel"
     url: https://nfcore.slack.com/channels/chipseqcr
-    about: Discussion about the nf-core/chipseqcr pipeline
+    about: Discussion about the m-mahgoub/nf-core-chipseqcr pipeline
