--- a/.github/workflows/awsfulltest.yml
+++ b/.github/workflows/awsfulltest.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   run-tower:
     name: Run AWS full tests
-    if: github.repository == 'nf-core/chipseqcr'
+    if: github.repository == 'm-mahgoub/nf-core-chipseqcr'
     runs-on: ubuntu-latest
     steps:
       - name: Launch workflow via tower
