--- a/.github/workflows/awstest.yml
+++ b/.github/workflows/awstest.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   run-tower:
     name: Run AWS tests
-    if: github.repository == 'nf-core/chipseqcr'
+    if: github.repository == 'm-mahgoub/nf-core-chipseqcr'
     runs-on: ubuntu-latest
     steps:
       # Launch workflow using Tower CLI tool action
