--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    nf-core/chipseqcr Nextflow config file
+    m-mahgoub/nf-core-chipseqcr Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -63,7 +63,7 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-// Load nf-core/chipseqcr custom profiles from different institutions.
+// Load m-mahgoub/nf-core-chipseqcr custom profiles from different institutions.
 // Warning: Uncomment only if a pipeline-specific instititutional config already exists on nf-core/configs!
 // try {
 //   includeConfig "${params.custom_config_base}/pipeline/chipseqcr.config"
@@ -163,9 +163,9 @@ dag {
 }
 
 manifest {
-    name            = 'nf-core/chipseqcr'
+    name            = 'm-mahgoub/nf-core-chipseqcr'
     author          = 'Mohamed Mahgoub'
-    homePage        = 'https://github.com/nf-core/chipseqcr'
+    homePage        = 'https://github.com/m-mahgoub/nf-core-chipseqcr'
     description     = 'Nextflow pipeline for ChIP-seq and CUT&RUN analysis based on an nf-core template'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=21.10.3'
