--- a/conf/test.config
+++ b/conf/test.config
@@ -20,10 +20,14 @@ params {
     max_time   = '12.h'
 
     // Input data
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/design.csv'
+    input = 'https://raw.githubusercontent.com/m-mahgoub/cutnrun-test-datasets/main/nf-core-chipseqcr/samplesheet.csv'
 
     // Genome references
-    fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
-    // Optional
-    macs_gsize = 1.2e7
+    fasta              = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20.fa.gz'
+    bowtie2            = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20-bowtie2.tar.gz'
+    gtf                = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20-genes.gtf.gz'
+    gene_bed           = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20-genes.bed.gz'
+    blacklist          = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
+    spikein_fasta      = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/e_coli_U00096_3.fa.gz'
+    spikein_bowtie2    = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/e_coli_U00096_3.tar.gz'
 }
