--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -15,9 +15,8 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Input data for full size test
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/design_full.csv'
-    single_end = true
+    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/samplesheet/test-GSE145187-all.csv'
 
     // Genome references
-    genome = 'hg19'
+    genome = 'GRCh38'
 }
