--- a/conf/test.config
+++ b/conf/test.config
@@ -20,15 +20,11 @@ params {
     max_time   = '12.h'
 
     // Input data
-    // input = 'https://raw.githubusercontent.com/m-mahgoub/cutnrun-test-datasets/main/nf-core-chipseqcr/samplesheet.csv'
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/samplesheet/test-GSE145187-small.csv'
-    // Genome references
-    fasta              = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20.fa.gz'
-    bowtie2            = '/Users/mohamedmm/Downloads/hg38-chr20-bowtie2'
-    // bowtie2            = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20-bowtie2.tar.gz'
-    gtf                = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20-genes.gtf.gz'
-    gene_bed           = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/hg38-chr20-genes.bed.gz'
-    blacklist          = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
-    spikein_fasta      = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/e_coli_U00096_3.fa.gz'
-    spikein_bowtie2    = 'https://raw.githubusercontent.com/nf-core/test-datasets/cutandrun/reference/genomes/e_coli_U00096_3.tar.gz'
+    input = 'https://raw.githubusercontent.com/m-mahgoub/test-datasets/main/nf-core-chipseqcr/test/samplesheet.csv'
+
+    // Genome references 
+    // fasta will be ignored if bowtie2 is provided
+    // set bowtie2 to null if you want fasta to be used to bulid the index
+    fasta              = 'https://raw.githubusercontent.com/m-mahgoub/test-datasets/main/nf-core-chipseqcr/test/genome.fa'
+    bowtie2            = null
 }
