Started adding customized Heatmap feature

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,6 +26,14 @@ process {
         ]
     }
 
+    withName: HEATMAP_BLUEPRINT {
+        publishDir = [
+            path: { "${params.outdir}/meta/heatmap_blueprint" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     withName: FASTQC {
         ext.args = '--quiet'
     }
