--- a/conf/test.config
+++ b/conf/test.config
@@ -25,7 +25,12 @@ params {
     // Genome references
     // fasta will be ignored if bowtie2 is provided
     // set bowtie2 to null if you want fasta to be used to bulid the index
-    fasta              = 'https://raw.githubusercontent.com/m-mahgoub/test-datasets/main/nf-core-chipseqcr/test/genome.fa'
-    bowtie2            = null
-    gsize              = 1.2e7
+    fasta             = 'https://raw.githubusercontent.com/m-mahgoub/test-datasets/main/nf-core-chipseqcr/test/genome.fa'
+    bowtie2           = null
+    gsize             = 1.2e7
+
+    // Heatmaps Blueprints specifications
+    // Define the plotting strategy for the desired heatmaps in YAML format
+    custom_heatmap = false
+    heatmap_blueprint = 'assets/test_heatmap_blueprint.yaml'
 }
