Add Deeptools computeMatrix module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -34,6 +34,24 @@ process {
         ]
     }
 
+    withName: DEEPTOOLS_BAMCOVERAGE {
+        publishDir = [
+            path: { "${params.outdir}/deeptools/bigWig" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+    }
+
+    withName: DEEPTOOLS_COMPUTEMATRIX {
+        ext.args   = 'reference-point --referencePoint center'
+        publishDir = [
+            path: { "${params.outdir}/deeptools/matrix" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+
     withName: FASTQC {
         ext.args = '--quiet'
     }
