--- a/conf/test.config
+++ b/conf/test.config
@@ -31,6 +31,6 @@ params {
 
     // Heatmaps Blueprints specifications
     // Define the plotting strategy for the desired heatmaps in YAML format
-    custom_heatmap = false
+    custom_heatmap = true
     heatmap_blueprint = 'assets/test_heatmap_blueprint.yaml'
 }
