Add plotHeatmap with options

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,6 +35,7 @@ process {
     }
 
     withName: DEEPTOOLS_BAMCOVERAGE {
+        ext.args   = '--binSize 10 --normalizeUsing RPKM --skipNonCoveredRegions --ignoreDuplicates --extendReads'
         publishDir = [
             path: { "${params.outdir}/deeptools/bigWig" },
             mode: params.publish_dir_mode,
@@ -43,7 +44,7 @@ process {
     }
 
     withName: DEEPTOOLS_COMPUTEMATRIX {
-        ext.args   = 'reference-point --referencePoint center'
+        ext.args   = 'reference-point --referencePoint center --sortRegions descend -b 3000 -a 3000 --missingDataAsZero --skipZeros'
         publishDir = [
             path: { "${params.outdir}/deeptools/matrix" },
             mode: params.publish_dir_mode,
@@ -51,6 +52,17 @@ process {
         ]
     }
 
+    withName: DEEPTOOLS_PLOTHEATMAP {
+        ext.args   = '--colorMap pink_r --perGroup --yMin 0  --refPointLabel "Center"'
+        ext.format     = 'png'
+        ext.height     = 27
+        ext.width      = 9
+        publishDir = [
+            path: { "${params.outdir}/deeptools/heatmap" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
 
     withName: FASTQC {
         ext.args = '--quiet'
