--- a/conf/base.config
+++ b/conf/base.config
@@ -26,11 +26,6 @@ process {
     //        adding in your local modules too.
     // TODO nf-core: Customise requirements for specific processes.
     // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
-    withLabel:process_very_low {
-        cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 30.m   * task.attempt, 'time'    ) }
-    }
 
     withLabel:process_low {
         cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
@@ -46,6 +41,11 @@ process {
         cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
         memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:process_short {
+        cpus   = { check_max( 1     * task.attempt, 'cpus'    ) }
+        memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 30.m   * task.attempt, 'time'    ) }
     }
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
